# auth

./: Cargo.toml  README.md  database.db
migrations/: 20260307091148_create_users.sql  20260307091331_create_refresh_tokens.sql  20260307091423_create_password_resets.sql  20260307112524_create_emails.sql
scripts/: test_passwordless.py
src/: auth.db  auth2.rs  config.rs  db.rs  handlers.rs  handlers_core.rs  lib.rs  logging.rs  migrations.rs  models.rs  passwordless.rs  user_id.rs
src/domain/auth/: errors.rs  jwt.rs  mod.rs  models.rs  service.rs  token.rs
src/passkey/: config.rs  error.rs  mod.rs  models.rs  state.rs
src/passkey/auth/: login.rs  mod.rs  register.rs
src/passwdless/: handlers.rs  mod.rs  service.rs
