[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate"] }
thiserror = "1.0"
futures-util = "0.3.31"
uuid = { version = "1.7", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22.1"
serde_json = "1.0.145"
anyhow = "1"
sha2 = "0.10.9"
futures = "0.3.31"
auth_middleware = {path="../auth_middleware"}
libsigners = {path="../libsigners"}
moka = { version = "0.12.13", features = ["future"] }
