[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
actix-web = "4.4"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22.1"
serde_json = "1.0.145"
sha2 = "0.10.9"
futures = "0.3.31"
libsigners = {git="https://github.com/Austin-rgb/libsigners"}
moka = { version = "0.12.13", features = ["future"] }
actixutils = {git="https://github.com/Austin-rgb/actixutils"}
url = "2.5.8"
event-stream = {git = "https://github.com/Austin-rgb/event-stream"}
e2schema = {git = "https://github.com/Austin-rgb/e2schema"}
webauthn-rs = {version="0.5.4", optional=true}
tracing = "0.1.44"
jsonwebtoken = "10.3.0"

[features]
passkey = ["webauthn-rs"]
